# polymarket-kit

./: .env  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Dockerfile  GEMINI.md  README.md  WEBSOCKET_CLIENT_INTEGRATION.md  WEBSOCKET_IMPLEMENTATION.md  biome.json  build.ts  docker-compose.yml  jsr.json  main.py  package.json  pnpm-lock.yaml  pyproject.toml  test-proxy.js  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc
.github/workflows/: publish.yml  py-publish.yml
.qoder/quests/: mcp-server-setup.md
.specify/memory/: constitution.md
docs/: WEBSOCKET_CLIENT.md  WEBSOCKET_SCHEMAS.md
examples/: README.md  data-api-examples.ts  data-api-quickstart.ts  websocket-simple.ts  websocket-typed.ts
examples/clob/: README.md  active-order.ts  builder-config-auth.ts  http-proxy.ts  price-history.ts  public-access.ts
examples/data/: README.md  data_example.py
examples/gamma/: README.md  gamma_example.py
examples/proxy/: README.md
examples/signature/: README.md
examples/websocket/: README.md  websocket-dynamic.ts  websocket-refresh.ts  websocket-simple.ts  websocket-typed.ts
go-client/: .env  README.md  README_DATA.md  README_GAMMA.md  README_PROXY.md  go.mod  go.sum
go-client/auth/: eip712.go  headers.go  hmac.go  wallet.go
go-client/client/: aggregator.go  aggregator_test.go  clob_client.go  endpoints.go  managed_conn.go  managed_conn_test.go  (+7 more)
go-polymarket/: README.md  api.json  cfg.yml  generate.go  go.mod  go.sum  overlay.yml
polymarket_kit/: __init__.py
src/: client.ts  dev.ts  index.ts  mod.ts  run.ts  server.ts  weather.ts  wrangler.ts
(+379 files in other folders)
