[project]
name = "polymarket-kit"
version = "0.1.0"
description = "Fully typed Polymarket SDK for Python — Gamma, CLOB, Data API, WebSocket, and order placement"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Huakun Shen", email = "huakun.shen@huakunshen.com" }]
keywords = ["polymarket", "prediction-markets", "trading", "websocket", "clob"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "websockets>=15.0",
    "py-clob-client>=0.17.0",
]

[project.urls]
Homepage = "https://github.com/HuakunShen/polymarket-kit"
Repository = "https://github.com/HuakunShen/polymarket-kit"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["py-src/polymarket_kit"]
